# rpg-stat

./: .gitignore  Cargo.toml  README.md  legendary_list  list.md  make_fmt_default  make_legendary.sh  tmp~
assets/: README.md  list.ini  npc-chart.fl
assets/character/: ABaoAQu.ini  AEsir.ini  ASeneeKiWakw.ini  Aatxe.ini  Abaasy.ini  Abada.ini  Abaia.ini  Abarimon.ini  Abath.ini  AburaSumashi.ini  Acephali.ini  Acheri.ini  Achlis.ini  AdarLlwchGwin.ini  Adaro.ini  Adhene.ini  Adlet.ini  Adroanzi.ini  Adventurer.ini  Adze.ini  Aerico.ini  Afanc.ini  Agathodaemon.ini  Agloolik.ini  Agni.ini  Agogwe.ini  Ahkiyyini.ini  Ahuizotl.ini  Ahura.ini  Aigamuxa.ini  Aigikampoi.ini  Airavata.ini  Aitu.ini  Aitvaras.ini  Ajatar.ini  Akateko.ini  Akhlut.ini  Akka.ini  Akki.ini  Akkorokamui.ini  (+1415 more)
assets/conversation/: buildings.txt  default.ini  politics.txt  sport.txt  weather.txt
assets/ini/: creatures.ini  heros.ini  legendary.ini  master-legendary.ini
src/: armor.rs  attributes.rs  blank.rs  body.rs  chemistry.rs  class.rs  cli.yaml  compass.rs  config.rs  creature.rs  effect.rs  equation.rs  gem.rs  item.rs  legendary.rs  legendary_list  lib.rs  list.rs  main.rs  makeright.sh  material.rs  npc.rs  random.rs  special.rs  stats.rs  tests.rs  types.rs
