[package]
name = "rpg-stat"
version = "0.1.5"
edition = "2018"
authors = ["Israel Dahl <israeldahl@protonmail.com>"]
description = "A library to computer stats for RPG game development"
keywords = ["rpg", "dnd", "game", "jrpg"]
categories = ["game-development", "command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/1sra3l/rpg-stat"
documentation = "https://docs.rs/rpg-stat/"

# library files
[lib]
name = "rpgstat"
path = "src/lib.rs" 

# binary file
[[bin]]
name = "rpgstat"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
strum = "0.22"
strum_macros = "0.22"
num = "0.2"
