[package]
name = "rpg-stat"
version = "4.0.0"
edition = "2021"
authors = ["Israel Dahl <israeldahl@protonmail.com>"]
description = "A library to computer stats for RPG game development"
keywords = ["rpg", "dnd", "game", "jrpg"]
categories = ["game-development", "command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/1sra3l/rpg-stat"
documentation = "https://docs.rs/rpg-stat/"

# library files
[lib]
name = "rpgstat"
path = "src/lib.rs" 

# binary file
[[bin]]
name = "rpgstat"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
strum = "0.22"
strum_macros = "0.22"
num = "0.2"
toml = "0.5"
rand = "0.8.4"
clap = {version = "3.0.0-beta.2", features = ["yaml"]}
fltk = { version = "1.2.6", optional = true }
fltk-form = { version = "0.1", optional = true }
fltk-form-derive = { version = "0.1", optional = true }

[features]
default = []#"serde", "strum", "strum_macros", "num", "ramd", "clap"]
fltkform = ["fltk", "fltk-form", "fltk-form-derive"]

