[package]
name = "rpg-stat"
version = "2021.12.8"
edition = "2021"
authors = ["Israel Dahl <israeldahl@protonmail.com>"]
description = "A library for computer stats for RPG game development"
keywords = ["rpg", "dnd", "game", "jrpg"]
categories = ["game-development", "command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/1sra3l/rpg-stat"
documentation = "https://docs.rs/rpg-stat/"

# library files
[lib]
name = "rpg_stat"
path = "src/lib.rs" 

# binary file
[[bin]]
name = "rpg-stat"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
num = "0.2"
toml = "0.5"
rand = "0.8.4"
clap = {version = "2.3.4", features = ["yaml"]}
fltk = { version = "1.2.6", optional = true }
fltk-form = { version = "0.1.2", optional = true }
fltk-form-derive = { version = "0.1", optional = true }
svg = { version = "0.10", optional = true }
[features]
default = []
fltkform = ["fltk", "fltk-form", "fltk-form-derive"]
makesvg = ["svg"]

